WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255504
[Clang][Win][JSC] dfg/DFGJITCode.h(163,18): warning: unqualified friend declaration referring to type outside of the nearest enclosing namespace is a Microsoft extension
https://bugs.webkit.org/show_bug.cgi?id=255504
Summary
[Clang][Win][JSC] dfg/DFGJITCode.h(163,18): warning: unqualified friend decla...
Fujii Hironori
Reported
2023-04-16 22:36:58 PDT
[Clang][Win][JSC] dfg/DFGJITCode.h(163,18): warning: unqualified friend declaration referring to type outside of the nearest enclosing namespace is a Microsoft extension clang-cl reports the following 2 warnings. [1235/6540] Building CXX object Source\JavaScriptCore\CMakeFiles\JavaScriptCore.dir\__\__\JavaScriptCore\DerivedSources\unified-sources\UnifiedSource-f0a787a9-11.cpp.obj In file included from C:\home\webkit\gc\WebKitBuild\Debug\JavaScriptCore\DerivedSources\unified-sources\UnifiedSource-f0a787a9-11.cpp:2: In file included from C:\home\webkit\gc\Source\JavaScriptCore\bytecode/Repatch.cpp:34: In file included from C:\home\webkit\gc\Source\JavaScriptCore\dfg\DFGSpeculativeJIT.h:31: In file included from C:\home\webkit\gc\Source\JavaScriptCore\dfg/DFGAbstractInterpreter.h:31: In file included from C:\home\webkit\gc\Source\JavaScriptCore\dfg/DFGGraph.h:37: In file included from C:\home\webkit\gc\Source\JavaScriptCore\dfg/DFGPlan.h:35: C:\home\webkit\gc\Source\JavaScriptCore\dfg/DFGJITCode.h(163,18): warning: unqualified friend declaration referring to type outside of the nearest enclosing namespace is a Microsoft extension; add a nested name specifier [-Wmicrosoft-unqualified-friend] friend class LLIntOffsetsExtractor; ^ ::JSC:: In file included from C:\home\webkit\gc\WebKitBuild\Debug\JavaScriptCore\DerivedSources\unified-sources\UnifiedSource-f0a787a9-11.cpp:2: In file included from C:\home\webkit\gc\Source\JavaScriptCore\bytecode/Repatch.cpp:34: C:\home\webkit\gc\Source\JavaScriptCore\dfg\DFGSpeculativeJIT.h(1032,5): warning: non-void function does not return a value [-Wreturn-type] } ^ 2 warnings generated.
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2023-04-16 22:42:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12785
EWS
Comment 2
2023-04-16 22:56:11 PDT
Committed
263013@main
(c778044f0f66): <
https://commits.webkit.org/263013@main
> Reviewed commits have been landed. Closing PR #12785 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-04-16 22:57:18 PDT
<
rdar://problem/108121881
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug