[Clang][Win][JSC] dfg/DFGJITCode.h(163,18): warning: unqualified friend declaration referring to type outside of the nearest enclosing namespace is a Microsoft extension https://bugs.webkit.org/show_bug.cgi?id=255504

Reviewed by Ross Kirsling.

clang-cl reported the following 2 warnings for Windows port.

> dfg/DFGJITCode.h(163,18): warning: unqualified friend declaration referring to type outside of the nearest enclosing namespace is a Microsoft extension; add a nested name specifier [-Wmicrosoft-unqualified-friend]
>     friend class LLIntOffsetsExtractor;
>                  ^
>                  ::JSC::
> dfg\DFGSpeculativeJIT.h(1032,5): warning: non-void function does not return a value [-Wreturn-type]

* Source/JavaScriptCore/dfg/DFGJITCode.h:
* Source/JavaScriptCore/dfg/DFGSpeculativeJIT.h:
(JSC::DFG::SpeculativeJIT::appendCallWithUGPRPair):

Canonical link: https://commits.webkit.org/263013@main